--- a/frontend/src/app/components/grocery-list-detail/grocery-list-detail.component.html
+++ b/frontend/src/app/components/grocery-list-detail/grocery-list-detail.component.html
@@ -34,7 +34,9 @@
             </svg>
           </div>
           <div>
-            <h1 data-cy="list-title" class="text-2xl font-heading font-bold text-neutral-900">{{ list()!.name }}</h1>
+            <h1 data-cy="list-title" class="text-2xl font-heading font-bold text-neutral-900">
+              {{ list()!.name }}
+            </h1>
             <p class="text-sm text-neutral-600 font-sans">
               Created {{ list()!.created_at | date }}
             </p>
